--- a/Project-Symfony/.env
+++ b/Project-Symfony/.env
@@ -18,3 +18,13 @@
 APP_ENV=dev
 APP_SECRET=d6b1b8f5918e5f6f92a9a6a8a091f0b1
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL=pgsql://symfony:symfony@postgres:5432/symfony
+###< doctrine/doctrine-bundle ###
